--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.2
-	loader_version=0.4.8+build.157
+    # check these on https://fabricmc.net/use
+    minecraft_version=1.15.1
+    yarn_mappings=1.15.1+build.17
+    loader_version=0.7.3+build.176
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.legobmw99
-	archives_base_name = betterthanmending
+    mod_version = 1.1.0
+    maven_group = com.legobmw99
+    archives_base_name = betterthanmending
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version=0.3.0+build.200
+    # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
+    fabric_version=0.4.25+build.282-1.15
