--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
+
+version=1.5.0
+mcp_mappings=20200514-1.16
+minecraft_version=1.16.1
+forge_version=32.0.23
