--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-    # check these on https://fabricmc.net/use
-    minecraft_version=1.16.1
-    yarn_mappings=1.16.1+build.4
-    loader_version=0.8.8+build.202
 
 # Mod Properties
-    mod_version = 1.1.1
+    mod_version = 1.2.0
     maven_group = com.legobmw99
     archives_base_name = betterthanmending
 
-# Dependencies
-    # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-    fabric_version=0.13.1+build.370-1.16
+# Fabric Properties
+# https://modmuss50.me/fabric.html
+
+    minecraft_version=1.16.1
+    yarn_mappings=1.16.1+build.21
+    loader_version=0.9.0+build.204
+
+#Fabric api
+    fabric_version=0.16.2+build.385-1.16.1
+
