--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 
 
 # Mod Properties
-    mod_version = 1.2.0
+    mod_version = 1.3.0
     maven_group = com.legobmw99
     archives_base_name = betterthanmending
 
 # Fabric Properties
 # https://modmuss50.me/fabric.html
 
-    minecraft_version=1.16.1
-    yarn_mappings=1.16.1+build.21
-    loader_version=0.9.0+build.204
+    minecraft_version=1.16.5
+    yarn_mappings=1.16.5+build.5
+    loader_version=0.11.1
 
 #Fabric api
-    fabric_version=0.16.2+build.385-1.16.1
+    fabric_version=0.30.3+1.16
+
+
 
