--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.13
+	loader_version=0.11.6
 
 # Mod Properties
-    mod_version = 1.3.0
-    maven_group = com.legobmw99
-    archives_base_name = betterthanmending
+	mod_version = 1.3.1
+	maven_group = com.legobmw99
+	archives_base_name = betterthanmending
 
-# Fabric Properties
-# https://modmuss50.me/fabric.html
-
-    minecraft_version=1.16.5
-    yarn_mappings=1.16.5+build.5
-    loader_version=0.11.1
-
-#Fabric api
-    fabric_version=0.30.3+1.16
-
-
-
+# Dependencies
+	fabric_version=0.36.0+1.17
