--- a/.github/workflows/fabric.yml
+++ b/.github/workflows/fabric.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: fabric
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
