--- a/.github/workflows/fabric.yml
+++ b/.github/workflows/fabric.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: my-branch
+        ref: fabric
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
