Port BetterThanMending to MultiLoader template

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,30 @@
 # Important Notes:
 # Every field you add must be added to the root build.gradle expandProps map.
-
 # Project
-version=1.0.0
-group=com.example.examplemod
-
+version=2.0.0
+group=com.legobmw99.BetterThanMending
 # Common
 minecraft_version=1.20.4
-mod_name=ExampleMod
-mod_author=Jared
-mod_id=examplemod
-license=C0-1.0
+mod_name=BetterThanMending
+mod_author=Legobmw99
+mod_id=betterthanmending
+license=GPL-3.0
 credits=
-description=The description of your mod. \nAccepts multilines.
-minecraft_version_range=[1.20.4, 1.21)
-
+description=A mod to improve the mending behavior in vanilla Minecraft.
+minecraft_version_range=[1.20.4,)
 # Fabric
+# https://fabricmc.net/develop/
 fabric_version=0.92.1+1.20.4
 fabric_loader_version=0.15.3
-
 # Forge
+# https://files.minecraftforge.net/net/minecraftforge/forge/
 forge_version=49.0.19
 forge_loader_version_range=[49,)
 forge_version_range=[49,)
-
 # NeoForge
-neoforge_version=20.4.83-beta
+# https://projects.neoforged.net/neoforged/neoforge
+neoforge_version=20.4.106-beta
 neoforge_loader_version_range=[2,)
-
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
