--- a/settings.gradle
+++ b/settings.gradle
@@ -25,7 +25,7 @@ plugins {
 }
 
 // This should match the folder name of the project, or else IDEA may complain (see https://youtrack.jetbrains.com/issue/IDEA-317606)
-rootProject.name = 'MultiLoader-Template'
+rootProject.name = 'BetterThanMending'
 include("common")
 include("fabric")
 include("forge")
