--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'fabric-loom' version '1.4-SNAPSHOT'
 }
 base {
-    archivesName = "${mod_name}-fabric-${minecraft_version}"
+    archivesName = "${mod_name}-fabric"
 }
 dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
@@ -42,12 +42,7 @@ loom {
 tasks.withType(JavaCompile).configureEach {
     source(project(":common").sourceSets.main.allSource)
 }
-tasks.withType(Javadoc).configureEach {
-    source(project(":common").sourceSets.main.allJava)
-}
-tasks.named("sourcesJar", Jar) {
-    from(project(":common").sourceSets.main.allSource)
-}
+
 
 processResources {
     from project(":common").sourceSets.main.resources
